# aprendendo-flet

./: readme.text  readme.txt  requeriments.txt
alerta/: app.py
carrosel/: app.py
meu_app_de_tarefas_simples/: README.md  pyproject.toml
meu_app_de_tarefas_simples/src/: main.py
navbar/: app.py
navrail/: app.py
tela de login/: app.py
tela_login_riot/: app.py
