[project]
name = "meu app de tarefas"
version = "0.1.0"
description = "Meu app de tarefas simples"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Fábio Adler de Luna Gomes", email = "adlerluna@hotmail.com" }
]
dependencies = [
  "flet==0.27.5"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.meu_app_de_tarefas.aiterne"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "meu app de tarefas"

# company name to display in about app dialogs
company = "Aiterne"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.5",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.5"}